2012-03-06  Miguel de Dios  <miguel.dedios@artica.es>
	
	* include/functions_graph.php: fixed into the function "progress_bubble"
	pass the height to create the image for progress bubble.
	
	* include/graphs/functions_gd.php: fixed into the function
	"gd_progress_bubble" when the $progress is upper to 100% or lower 0% show
	the image "out of limits".
	
	* godmode/reporting/visual_console_builder.editor.js: fixed into the
	function "getPercentileBubble" set the height equal to width instead to 15
	pixels.

2012-03-06  Sancho Lerena <slerena@artica.es>

	* images/console/icons/nubebola*: New icons for big colored circle.

	* include/functions_groups.php: Fixed problem with "ALL" group in
	group view. (agents x2)

	* godmode/reporting/visual_console_builder.editor.php: More space 
	in fields.

2012-03-06  Sergio Martin <sergio.martin@artica.es>

	* include/graphs/functions_pchart.php
	include/functions_reporting.php
	include/functions_ui.php
	operation/reporting/reporting_viewer.php: Improved the
	top n report and the general date report form

2012-03-05  Miguel de Dios  <miguel.dedios@artica.es>
	
	* pandora_console/include/functions_graph.php,
	pandora_console/include/graphs/fgraph.php: fixed the lost font size and
	colorRGB for progressBar and progressBubble.

2012-03-02  Miguel de Dios  <miguel.dedios@artica.es>
	
	* images/percentile_item.disabled.png, images/percentile_item.png: added
	images for button of percentile item (new item in visual map).
	
	* include/styles/pandora.css: added the style for the new button percentile
	item.
	
	* include/functions_graph.php: cleaned source code style, and added the
	params to set text and color in the function "progress_bar" and added
	function to paint a Bubble Chart (http://en.wikipedia.org/wiki/Bubble_chart)
	with the name "progress_bubble".

	* include/graphs/functions_gd.php: added new params for the text and color
	in the function "gd_progress_bar" and added function to paint Bubble Chart