@@ -1,5 +1,12 @@
 2012-03-06  Miguel de Dios  <miguel.dedios@artica.es>
 	
+	* include/graphs/fgraph.php: set by default the font size for bubble to 7.
+	
+	* godmode/reporting/visual_console_builder.editor.js: fixed to select
+	progress bubble and bar.
+
+2012-03-06  Miguel de Dios  <miguel.dedios@artica.es>
+	
 	* include/functions_graph.php: fixed into the function "progress_bubble"
 	pass the height to create the image for progress bubble.
 	
